# NER-can-use-NPU-Test

./: .env.example  .gitignore  BIO接頭辞とは？.md  README.md  decode_npu_ner_outputs.py  download.py  download_ocr.py  import_test.py  main.py  ocr_pipeline_donut.py  pyproject.toml
shape/: shape.json
src/ner_openvino/: ai.py  hf_paths.py  main.py  model_urls.py  models.py  preprocess_model.py  schemas.py  setup.py  test_ir.py
src/ner_openvino/download_model/: config.py  device_enum.py  downloader.py  loader.py  loader_intel.py  loader_intel_npu.py  ner_ignore.txt  shape_json.py
src/ner_openvino/download_model/builders/: __init__.py  base.py  director.py  generic.py  npu.py
src/ner_openvino/download_model/loaders/: __init__.py  intel.py  intel_npu.py
src/ner_openvino/models/: config.py  downloader.py  loader.py  ner_allow.txt  types.py
src/ner_openvino/npu_ner/: bio_interpretation.py  decode_ner.py  decryption.py  marge_space.py  softmax.py
src/ner_openvino/utils/logger_utils/: custom_formatter.py  logger_factory.py  logger_injector.py  logger_interface.py  logger_utils.py
src/ner_openvino/utils/text_utils/: read_line.py  split_longtext.py
tests/: test_logger_utils.py
tests/utils/logger_utils/: conftest.py  test_custom_formatter.py  test_level_mapper.py  test_logger_factory.py  test_logger_injector.py
tests/utils/text_utils/: test_read_line.py  test_split_longtext.py
utils/logger_utils/: logger_utils.py
