[project]
name = "ner-openvino-app"
version = "0.1.0"
description = "NERモデルをOpenVINOを使って推論するためのアプリです。"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.116.1",
    "opencv-python>=4.12.0.88",
    "optimum[nncf,openvino]>=1.27.0",
    "pytest>=8.4.2",
    "uvicorn>=0.35.0",
]

[tool.setuptools.packages.find]
where = ["src"]
