[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[tool.uv]
package = true  # 明示（既定は true だが明文化しておくと安心なので）
link-mode = "copy"

[project]
name = "ner-openvino-app"
version = "0.1.0"
description = "NERモデルをOpenVINOを使って推論するためのアプリです。"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.116.1",
    "opencv-python>=4.12.0.88",
    "optimum[nncf,openvino]>=1.27.0",
    "pytest>=8.4.2",
    "uvicorn>=0.35.0",
]

[tool.setuptools.packages.find]
where = ["src"]

# optimum内でopsetが重複してるらしきライブラリ性のワーニングを除去
[tool.pytest.ini_options]
filterwarnings = [
  # メッセージで絞り込み、カテゴリは基底の Warning、モジュールも限定
  "ignore:.*scaled_dot_product_attention.*:Warning:torch.onnx._internal.registration.*",
]
